src/app/global.css
/* ... */
@media (max-width: 576px) {
  .ant-select-selector{
    /* border-radius: 12px !important; */
    border-top-right-radius: 12px !important;
    border-bottom-right-radius: 12px !important;
    /*border-right: 1px solid #d9d9d9 !important*/
    /*border-right: 1px !important;*/
  }
  .rate-suggesstion{
    width: 100%;
  }
  .mobile-full-width{
    width: 100%;
  }
  .mobile-px-6{
    padding-right: 6px;
    padding-left: 6px;
  }
  .mobile-W-156{
    width: 156px !important;
  }

  .search-input-field::placeholder{
    font-size: 14px;
  }

  .mobile-margin-top {
    margin-top: 8px;
  }
  .mobile-flex-col {
    display: flex;
    flex-direction: column;
  }
  /* .mobile-py-20 {
    padding-top: 20px;
    padding-bottom: 20px;
  } */

  .mobile-py-48 {
    padding-right: 48px;
    padding-left: 48px;
  }

  .mobile-py-40 {
    padding-right: 40px;
    padding-left: 40px;
  }

  .mobile-px-20 {
    padding-right: 20px;
    padding-left: 20px;
  }

  .tablet-flex-col h1,
  .tablet-flex-col h2 {
    font-size: 40px;
  }

  .mobile-text-16 {
    font-size: 16px;
  }

  .mobile-font-24 p {
    font-size: 24px;
  }

  .search-input-field {
    width: 100% !important;
    height: 52px !important;
    font-size: 13px;
  }

  .ant-select-selection-search-input {
    width: 100% !important;
    height: 52px !important;
    font-size: 10px;
    border: none !important;
  }

  .mobile-pa-selection {
    padding-right: 0px;
    padding-left: 10px;
  }
  .search-icon-width-mobile {
    height: 52px !important;
  }

  .mobile-button-width-320 button {
    width: 320px;
  }
  .mobile-justify-center {
    justify-content: center;
  }
  .professor-img {
    width: 34px;
    height: 34px;
  }

  .professor-name-16 {
    font-size: 16px;
  }

  .professor-rating-24 {
    font-size: 24px;
  }
  .professor-text-13 {
    font-size: 13px;
  }
  .reviews > img {
    width: 38px;
    height: 38px;
  }
  .reviews > p {
    font-size: 20px;
  }
  .mobile-px-10 {
    padding-right: 10px;
    padding-left: 10px;
  }
  .mobile-width-dropdown {
    width: 100px !important;
    height: 52px !important;
  }

  .mobile-width-dropdown-100{
    width: 100px !important;
  }

  .mobile-text-14{
    font-size: 14px;
  }

  .mobile-text-13 {
    font-size: 13px;
  }
  .mobile-text-11{
    font-size: 11px;
  }
  .py-8-mobile{
    padding-top: 8px;
    padding-bottom: 8px;
  }

  .height-search-52 {
    height: 52px !important;
  }

  .full-width-mobile-responsive {
    width: 100% !important;
  }

  /* Sidebar */
  .sidebar {
    position: fixed;
    top: 0;
    left: 0;
    width: 300px;
    height: 100%;
    background-color: #fff;
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
    transform: translateX(-100%);
    transition: transform 0.3s ease-in-out;
    z-index: 1000;
  }

  .sidebar.open {
    transform: translateX(0);
  }

  .sidebar-content {
    padding: 20px;
  }

  .close-button {
    position: absolute;
    top: 20px;
    right: 20px;
    font-size: 30px;
    cursor: pointer;
  }

  /* Overlay */
  .overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    z-index: 999;
  }

  .header-autocomplete-size{
    width: 100px !important;
  }
  .width-header-search{
    width: 36px  !important;
  }
  .rate-input{
    width: 100%;
  }
}

